#193 Scrollbar fro new design, responsive fixes for paddings

--- a/webapp/styles/main.less
+++ b/webapp/styles/main.less
@@ -4,15 +4,18 @@
 
 @import "../css/variables.less";
 
-.splash-main-container {
+.h-100 {
   height: 100%;
+}
+.p-0 {
+  padding: 0;
 }
 .splash-background {
   background: url(../resources/splash_new.jpg) no-repeat center;
   background-size: cover;
   display: flex;
   .logo-container {
-    background: #ffffff;
+    background: @white;
     box-shadow: -4px 0px 50px rgba(0, 0, 0, 0.1);
     padding: 18px 21px 19px 17px;
     margin: auto 0 20px auto;
@@ -26,15 +29,20 @@
   }
 }
 .splash-container {
-  padding: 0 89px 0 57px;
+  padding: 0 30px;
+  @media screen and (min-width: 768px) {
+    padding: 0 89px 0 57px;
+  }
+  @media screen and (min-width: 960px) {
+    padding: 0 30px;
+  }
+  @media screen and (min-width: 1024px) {
+    padding: 0 89px 0 57px;
+  }
   .brand-logo {
     height: 52px;
     margin: 57px 0 107px;
   }
-}
-.bg-grey {
-  padding: 0;
-  height: 100%;
 }
 .grey-box {
   background: @bgDark;
@@ -49,21 +57,21 @@ body {
   overflow: auto;
   background: @bgDarker;
 }
-.box-with-button {
+.input-with-button {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   .input-form-control {
-    width: 75%;
+    width: calc(100% - 170px);
     input {
       font-size: 16px;
       padding-bottom: 8px;
-      color: #ffffff;
+      color: @white;
     }
   }
 }
-.chip-button {
-  border: 1px solid #e0e0e0;
+.badge-button {
+  border: 1px solid @buttonOutlineColor;
   border-radius: 16px;
   font-size: 13px;
   line-height: 13px;
@@ -89,6 +97,19 @@ body {
     opacity: 0.5;
   }
 }
+.scrollbar;
+* {
+  .scrollbar;
+}
+.scrollbar {
+  &::-webkit-scrollbar-thumb {
+    background: @white;
+    border-radius: @panelradius;
+  }
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+}
 
 @panelradius: 5px;
 @gutter: 16px;
@@ -105,6 +126,7 @@ body {
 
 sup {
   font-size: 50%;
+  top: -0.8em;
 }
 
 #logo {
@@ -166,11 +188,6 @@ iframe {
       width: 100% !important;
       height: 100% !important;
       // position: static;
-    }
-
-    .scrollbar;
-    * {
-      .scrollbar;
     }
 
     input,
@@ -294,16 +311,6 @@ iframe {
   }
   p {
     margin: 0;
-  }
-}
-
-.scrollbar {
-  &::-webkit-scrollbar-thumb {
-    background: @secondary_color;
-    border-radius: @panelradius;
-  }
-  &::-webkit-scrollbar {
-    width: 8px;
   }
 }
 .listviewer {
